--- a/Hansen/Views/Home/_Contact.cshtml
+++ b/Hansen/Views/Home/_Contact.cshtml
@@ -1,4 +1,4 @@
-﻿<section id="contact" class="content-section row">
+﻿<section id="contact" class="content-section row" data-magellan-target="contact">
     <h2>Get in Touch!</h2>
     <p>Thank you for your interest in A.L. Hansen Paint & Metal. We appreciate your business. Please feel free to call us to schedule an appointment for an estimate, or use the form below.</p>
 
