--- a/Hansen/Views/Home/_Services.cshtml
+++ b/Hansen/Views/Home/_Services.cshtml
@@ -1,10 +1,10 @@
-﻿<section id="services" class="content-section">
-    <div class="row">
-        <h2>Services</h2>
-    </div>
-
+﻿<section id="services" class="content-section services" data-magellan-target="services">
     <div class="content-overlay">
         <div id="service-columns" class="row" data-equalizer>
+            <div class="small-12 columns">
+                <h2 class="services-heading">Services</h2>
+            </div>
+            
             <div class="small-12 medium-4 columns overlaying-content">
                 <div class="navy-tint" data-equalizer-watch>
                     <h3>Collision repair and painting to:</h3>
