--- a/Hansen/Views/Home/Index.cshtml
+++ b/Hansen/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<section class="content">
+<section class="content" id="content">
     @Html.Partial("_About")
 
     @Html.Partial("_Services")
