--- a/Hansen/Views/Home/_About.cshtml
+++ b/Hansen/Views/Home/_About.cshtml
@@ -1,8 +1,11 @@
-﻿<section id="about" class="content-section">
+﻿<section id="about" class="content-section" data-magellan-target="about">
     <div class="row">
         <div class="large-6 columns">
             <h2>Headline</h2>
             <p>At Hansen's we repair all types of body damage. We have the facilities to repair and paint any type of vehicle, from the smallest automobiles to the largest trucks. We major in commercial vehicles and we have the technicians it takes to turn out quality workmanship.</p>
+
+            <p class="large">Give us a call at (502) 774-2947 to schedule a free estimate!</p>
+
             <a href="#contact" class="button">Get in touch</a>
         </div>
 
@@ -18,7 +21,9 @@
 
         <div class="large-7 columns">
             <h3 class="subheader">Established 1908 by A.L. (Ollie) Hansen</h3>
-            <p>At the turn of the century, Mr. Hansen was painting houses, picket fences, buggies and whatever else needed painting. The automotive industries started rolling, in which Mr. Hansen had foreseen the consumer's need for automotive care. He established his company in 1908; located in St. Matthews, Kentucky, where it became a complete success. An employee, James (Jim) Brangers, and William F. Datwyler purchased the company from Mr. Hansen upon his retirement in 1955. Mr. Hansen sold the property in St. Matthews to Bacon's Department store; then, in 1956, Mr Brangers and Mr. Datwyler purchased property at 2620 West Chestnut St in Downtown Louisville and relocated the business where it resides today. In 1977, Mr Brangers and Mr Datwyler retired. They sold the business to Mr. Brangers' son, James (Jim) J. Brangers Sr. He operates the business with the help of his wife Marcella; daughter, Wanda; son, Joe, and a fine group of fine professional men. In 1998, the property next door was purchased for office use.</p>
+            <p>At the turn of the century, Mr. Hansen was painting houses, picket fences, buggies and whatever else needed painting. The automotive industries started rolling, in which Mr. Hansen had foreseen the consumer's need for automotive care. He established his company in 1908; located in St. Matthews, Kentucky, where it became a complete success.</p>
+            <p>An employee, James (Jim) Brangers, and William F. Datwyler purchased the company from Mr. Hansen upon his retirement in 1955. Mr. Hansen sold the property in St. Matthews to Bacon's Department store; then, in 1956, Mr Brangers and Mr. Datwyler purchased property at 2620 West Chestnut St in Downtown Louisville and relocated the business where it resides today.</p>
+            <p>In 1977, Mr Brangers and Mr Datwyler retired. They sold the business to Mr. Brangers' son, James (Jim) J. Brangers Sr. He operates the business with the help of his wife Marcella; daughter, Wanda; son, Joe, and a fine group of fine professional men. In 1998, the property next door was purchased for office use.</p>
         </div>
     </div>
 </section>
