--- a/Hansen/Views/Home/_About.cshtml
+++ b/Hansen/Views/Home/_About.cshtml
@@ -1,4 +1,4 @@
-﻿<section id="about" class="content-section" data-magellan-target="about">
+﻿<section id="about" class="content-section m3-bottom" data-magellan-target="about">
     <div class="row">
         <div class="large-6 columns">
             <h2>Headline</h2>
@@ -10,13 +10,13 @@
         </div>
 
         <div class="large-6 columns">
-            <img src="http://placehold.it/500x300" alt="" />
+            <img src="@Url.Content("~/Content/images/52-hansen-truck.jpg")" alt="" />
         </div>
     </div>
 
     <div class="row m5-top">
         <div class="large-5 columns">
-            <img src="http://placehold.it/400x350" alt="" />
+            <img src="@Url.Content("~/Content/images/hansen-sign.jpg")" alt="" />
         </div>
 
         <div class="large-7 columns">
