--- a/Hansen/Views/Home/_Contact.cshtml
+++ b/Hansen/Views/Home/_Contact.cshtml
@@ -1,6 +1,8 @@
 ﻿<section id="contact" class="content-section row" data-magellan-target="contact">
-    <h2>Get in Touch!</h2>
-    <p>Thank you for your interest in A.L. Hansen Paint & Metal. We appreciate your business. Please feel free to call us to schedule an appointment for an estimate, or use the form below.</p>
+    <div class="small-12 columns">
+        <h2>Get in Touch!</h2>
+        <p>Thank you for your interest in A.L. Hansen Paint & Metal. We appreciate your business. Please feel free to call us to schedule an appointment for an estimate, or use the form below.</p>
+    </div>
 
     <div class="large-6 columns" id="form-container"></div>
 
